kustomize/deploy.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: nuxt-starter
spec:
  selector:
    matchLabels:
      app: nuxt-starter
  replicas: 1 # tells deployment to run 2 pods matching the template
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: nuxt-starter
    spec:
      containers:
        - name: nuxt-starter
          image: cr.amoylabs.com/guuuuo/nuxt-starter:32
          ports:
            - name: http
              containerPort: 3000
