kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sfe4j-demo
spec:
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: http
  selector:
    app: sfe4j-demo
