kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nuxt-starter
spec:
  ingressClassName: nginx
  rules:
  - host: nuxt-starter.amoylabs.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nuxt-starter
            port: 
              number: 3000
