kustomize/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata: 
  name: nuxt-starter
  namespace: nuxt-starter
spec: 
  entryPoints: 
    - https
  routes: 
    - kind: Rule
      match: Host(`nuxt-starter.amoylabs.com`)
      services: 
        - name: nuxt-starter
          port: 3000
  tls:
    secretName: default-cert
